[package]
name = "raa_tt"
version = "0.9.1"
categories = ["science", "mathematics", "parser-implementations"]
description = "Proves sentences of propositional calculus"
documentation = "https://docs.rs/raa_tt"
repository = "https://github.com/jsinger67/raa_tt"
edition = "2024"
keywords = ["propositional", "calculus"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
env_logger = "0.11"
ariadne = "0.6.0"
parol_runtime = { version = "4.1", default-features = false }
petgraph = "0.8"
scnr2 = "0.3.3"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[build-dependencies]
parol = "4.2"

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3

[[bench]]
name = "prover_benchmarks"
harness = false

[[bench]]
name = "table_generator_benchmarks"
harness = false
